@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19960216
+MANIFEST for ded, version t19960226
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
